--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
       href="https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&display=swap"
       rel="stylesheet"
     />
-
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Portifólio-Gabriel</title>
+    <link rel="icon" href="assets/icon/coding.png" type="icon">
   </head>
   <body>
   <main>
