--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -13,78 +16,112 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <title>Portifólio-Gabriel</title>
-    <link rel="icon" href="assets/icon/coding.png" type="icon">
+    <link rel="icon" href="assets/icon/coding.png" type="icon" />
   </head>
   <body>
-  <main>
-    <section class="intro-sec">
-      <div class="intro-content">
-        <img src="assets/img/Eu1.jpeg" alt="Gabriel de Oliveira" class="intro-pic" />
-        <div class="intro-txt">
-          <h2>Olá! Me chamo Gabriel de Oliveira.</h2>
-          <p>Apaixonado por tecnologia e desenvolvimento web. Gosto de criar soluções práticas e aprender novas habilidades todos os dias.</p>
-          <a href="aboutMe.html">Quem sou eu?</a>
-          <button id="theme-toggle" class="theme-toggle button" onclick="toggleTheme()">🌙</button>
-
+    <main>
+      <section class="intro-sec">
+        <div class="intro-content">
+          <img
+            src="assets/img/Eu1.jpeg"
+            alt="Gabriel de Oliveira"
+            class="intro-pic"
+          />
+          <div class="intro-txt">
+            <h2>Olá! Me chamo Gabriel de Oliveira.</h2>
+            <p>
+              Apaixonado por tecnologia e desenvolvimento web. Gosto de criar
+              soluções práticas e aprender novas habilidades todos os dias.
+            </p>
+            <a href="aboutMe.html">Quem sou eu?</a>
+            <button
+              id="theme-toggle"
+              class="theme-toggle button"
+              onclick="toggleTheme()"
+            >
+              🌙
+            </button>
+          </div>
         </div>
-      </div>
-    </section>
+      </section>
 
-    <section class="cards-container">
-      <div class="card">
-        <h3>Site Básico</h3>
-        <p>Site básico feito apenas em HTML e CSS</p>
-        <a href="assets/docs/SiteBasicoHTMLeCSS/" class="button"
-          >Clique Aqui!</a
-        >
-      </div>
+      <section class="cards-container">
+        <div class="card">
+          <h3>Site Básico</h3>
+          <p>Site básico feito apenas em HTML e CSS</p>
+          <a
+            href="assets/docs/SiteBasicoHTMLeCSS/"
+            class="button"
+            target="_blank"
+            >Clique Aqui!</a
+          >
+        </div>
 
-      <div class="card">
-        <h3>Calculadora</h3>
-        <p>Calculadora simples feita em JavaScript</p>
-        <a
-          href="assets/docs/Calculadora_JS/Projeto/index.html"
-          class="button"
-          >Clique Aqui!</a
-        >
-      </div>
+        <div class="card">
+          <h3>Calculadora</h3>
+          <p>Calculadora simples feita em JavaScript</p>
+          <a
+            href="assets/docs/Calculadora_JS/Projeto/index.html"
+            class="button"
+            target="_blank"
+            >Clique Aqui!</a
+          >
+        </div>
 
-      <div class="card">
-        <h3>Calculadora de Gorgeta</h3>
-        <p>Com opções de porcentagem e divisão</p>
-        <a href="assets/docs/TipCalculator/index.html" class="button"
-          >Clique Aqui!</a
-        >
-      </div>
+        <div class="card">
+          <h3>Calculadora de Gorgeta</h3>
+          <p>Com opções de porcentagem e divisão</p>
+          <a
+            href="assets/docs/TipCalculator/index.html"
+            class="button"
+            target="_blank"
+            >Clique Aqui!</a
+          >
+        </div>
 
-      <div class="card">
-        <h3>Pick a Color</h3>
-        <p>Clique no botão para selecionar aleatoriamente uma cor</p>
-        <a href="assets/docs/ColorChanger/index.html" class="button"
-          >Clique Aqui!</a
-        >
-      </div>
+        <div class="card">
+          <h3>Pick a Color</h3>
+          <p>Clique no botão para selecionar aleatoriamente uma cor</p>
+          <a
+            href="assets/docs/ColorChanger/index.html"
+            class="button"
+            target="_blank"
+            >Clique Aqui!</a
+          >
+        </div>
 
-      <div class="card">
-        <h3>Guess the Number</h3>
-        <p>Jogo de adivinhação entre 1 e 100 contra o computador</p>
-        <a href="assets/docs/GuessTheNumber/index.html" class="button"
-          >Clique Aqui!</a
-        >
-      </div>
-    </section>
-  </main>
+        <div class="card">
+          <h3>Guess the Number</h3>
+          <p>Jogo de adivinhação entre 1 e 100 contra o computador</p>
+          <a
+            href="assets/docs/GuessTheNumber/index.html"
+            class="button"
+            target="_blank"
+            >Clique Aqui!</a
+          >
+        </div>
+      </section>
+    </main>
     <footer>
       <p>Desenvolvido por Gabriel de Oliveira</p>
       <p>2025</p>
-      <a href="https://www.instagram.com/gabriel99oliveira/" aria-label="Perfil do Instagram de Gabriel"><i class="fab fa-instagram"></i> Instagram</a>
-      <a href="https://github.com/GabrielDe0liveira" aria-label="Perfil do GitHub de Gabriel"><i class="fab fa-github"></i> GitHub</a>
-      <a href="https://www.linkedin.com/in/gabriel-de-oliveira-44023a348/" aria-label="Perfil do LinkedIn de Gabriel"><i class="fab fa-linkedin"></i> LinkedIn</a>
+      <a
+        href="https://www.instagram.com/gabriel99oliveira/"
+        aria-label="Perfil do Instagram de Gabriel"
+        ><i class="fab fa-instagram"></i> Instagram</a
+      >
+      <a
+        href="https://github.com/GabrielDe0liveira"
+        aria-label="Perfil do GitHub de Gabriel"
+        ><i class="fab fa-github"></i> GitHub</a
+      >
+      <a
+        href="https://www.linkedin.com/in/gabriel-de-oliveira-44023a348/"
+        aria-label="Perfil do LinkedIn de Gabriel"
+        ><i class="fab fa-linkedin"></i> LinkedIn</a
+      >
     </footer>
 
-
-    <script src="index.js">
-    </script>
-    
+    <script src="index.js"></script>
   </body>
 </html>
